--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "fontawesome": "^5.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
