--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "classnames": "^2.2.6",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
