--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "classnames": "^2.2.6",
+    "date-fns": "^2.13.0",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
