--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "apollo-server": "^2.13.0",
+    "apollo-server-micro": "^2.13.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.13.0",
+    "graphql": "^15.0.0",
+    "micro-cors": "^0.1.1",
     "next": "9.3.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
