--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "apollo-boost": "^0.4.8",
     "apollo-server": "^2.13.0",
     "apollo-server-micro": "^2.13.0",
     "classnames": "^2.2.6",
@@ -19,6 +21,7 @@
     "graphql": "^15.0.0",
     "micro-cors": "^0.1.1",
     "next": "9.3.6",
+    "next-with-apollo": "^5.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.5"
