--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.5"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.0.0-beta.4"
   }
 }
