--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@prisma/client": "^2.0.0-beta.5",
     "apollo-boost": "^0.4.8",
     "apollo-server": "^2.13.0",
     "apollo-server-micro": "^2.13.0",
