--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-with-apollo": "^5.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-spring": "^8.0.27",
     "sass": "^1.26.5"
   },
   "devDependencies": {
