--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.15",
     "sass": "^1.26.5"
   },
   "devDependencies": {
